--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
         
-        <p class="view"><a href="https://scholar.google.com/citations?hl=en&user=tQZ38_wAAAAJ">View my Google Scholar Profile</a></p>
+        <p class="view"><a href="https://scholar.google.com/citations?hl=en&user=tQZ38_wAAAAJ">View My Google Scholar Profile</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
