--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,8 @@
         {% endif %}
         
         <p class="view"><a href="https://scholar.google.com/citations?hl=en&user=tQZ38_wAAAAJ">View My Google Scholar Profile</a></p>
+        
+        <p class="view"><a href="https://drive.google.com/open?id=1mYJj4vxZcde34-qTkWZl1rFT6Rh_YekT"> View My CV</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
