--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
         
-        <p class="view"><a href="https://github.com/jessicaloohw/jessicaloohw.github.io/blob/master/docs/CV_Jessica_Loo.pdf"> View My CV</a></p>
+        <p class="view"><a href="https://jessicaloohw.github.io/blob/master/docs/CV_Jessica_Loo.pdf"> View My CV</a></p>
         
         <p class="view"><a href="https://scholar.google.com/citations?hl=en&user=tQZ38_wAAAAJ">View My Google Scholar Profile</a></p>
         
