--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,8 @@
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
+        
+        <img src="https://jessicaloohw.github.io/docs/Jessica_Loo.jpg" alt="Logo" />
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
