--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
         
-        <img src="https://jessicaloohw.github.io/docs/Jessica_Loo.jpg" alt="Logo" />
+        <img src="https://jessicaloohw.github.io/docs/Jessica_Loo.jpg" alt="Logo" style="width:626px;height:870px;" />
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
