--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
         
-        <img src="https://jessicaloohw.github.io/docs/Jessica_Loo.jpg" alt="Logo" style="width:150px;height:209px;" />
+        <img src="https://jessicaloohw.github.io/docs/Jessica_Loo.jpg" alt="Logo" style="width:125px;height:174px;" />
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
@@ -53,7 +53,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
