--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,8 @@
         
         <p class="view"><a href="https://scholar.google.com/citations?hl=en&user=tQZ38_wAAAAJ">View My Google Scholar Profile</a></p>
         
+        <p class="view"><a href="https://www.linkedin.com/in/jessicaloohw">View MyLinkedIn</a></p>
+        
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
